--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
-
   },
   "author": "Roi Efraim",
   "license": "MIT",
@@ -15,6 +14,8 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0"
   },
   "devDependencies": {
